--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -10,17 +10,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: tshirts fail
+     - name: tshirts fail
       run: |
         g++ -Wall -Wextra -Werror tshirts.c -o tshirts.out
+        ./tshirts.out
         
-
     - name: misaligned fail
       run: |
         g++ -Wall -Wextra -Werror misaligned.c -o misaligned.out
+       ./misaligned.out
         
-
     - name: alerter fail
       run: |
         g++ -Wall -Wextra -Werror alerter.c -o alerter.out
+       ./alerter.out
         
